--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "description": "Crawling tool for PhantomJS",
   "version": "0.0.1",
   "dependencies": {
-    "babel": "~ 5.0",
     "gulp": "*",
-    "gulp-babel": "~ 5.0",
+    "gulp-babel": "^6",
+    "babel-preset-es2015": "^6",
+    "babel-plugin-add-module-exports": "^0.1",
     "run-sequence": "^1.1.5",
     "del": "^2.2.0",
     "minimist": "^1.2.0",
