--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "phawler",
   "description": "Crawling tool for PhantomJS",
   "version": "0.0.1",
-  "dependencies": {
+  "devDependencies": {
     "gulp": "*",
     "gulp-babel": "^6",
     "babel-preset-es2015": "^6",
@@ -11,7 +11,8 @@
     "del": "^2.2.0",
     "minimist": "^1.2.0",
     "urijs": "^1.17.0",
-    "smelly-event-emitter": "^0.1"
+    "smelly-event-emitter": "^0.1",
+    "deepmerge": "^0.2.9"
   },
   "license": "MIT"
 }
